[package]
name = "dexquote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfmms = { git = "https://github.com/0xKitsune/cfmms-rs.git" }
uniswap_v3_math = { git = "https://github.com/0xKitsune/uniswap-v3-math.git" }
clap = { version = "4.3.10", features = ["derive"] }
confy = "0.5.1"
ethers = "2.0.7"
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
tokio = { version =  "1.29.1", features = ["rt-multi-thread", "macros"] }
crossbeam-channel = "0.5.8"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0.40"
indicatif = "0.17.5"

[dev-dependencies]
compute-univ3-address = { git = "https://github.com/yuichiroaoki/compute-univ3-address.git", version = "0.2.1" }

[dependencies.redis]
version = "*"
